# openapi.yaml
@@ -43,9 +43,9 @@ paths:
                 "$ref": "#/components/schemas/ErrorPayload"
       security:
       - default: []
-  "/roomTypes":
+  "/ticketTypes":
     get:
-      operationId: getRoomtypes
+      operationId: getTickettypes
       parameters:
       - name: checkinDate
         in: query
@@ -77,7 +77,7 @@ paths:
               schema:
                 type: array
                 items:
-                  "$ref": "#/components/schemas/RoomType"
+                  "$ref": "#/components/schemas/TicketType"
         '500':
           description: Internal server error
           content:
@@ -193,7 +193,7 @@ components:
       - checkinDate
       - checkoutDate
       - rate
-      - roomType
+      - ticketType
       - user
       type: object
       properties:
@@ -204,7 +204,7 @@ components:
         rate:
           type: integer
           format: int64
-        roomType:
+        ticketType:
           type: string
         user:
           "$ref": "#/components/schemas/User"
@@ -213,7 +213,7 @@ components:
       - checkinDate
       - checkoutDate
       - id
-      - room
+      - ticket
       - user
       type: object
       properties:
@@ -224,11 +224,11 @@ components:
         id:
           type: integer
           format: int64
-        room:
-          "$ref": "#/components/schemas/Room"
+        ticket:
+          "$ref": "#/components/schemas/Ticket"
         user:
           "$ref": "#/components/schemas/User"
-    Room:
+    Ticket:
       required:
       - number
       - type
@@ -238,8 +238,8 @@ components:
           type: integer
           format: int64
         type:
-          "$ref": "#/components/schemas/RoomType"
-    RoomType:
+          "$ref": "#/components/schemas/TicketType"
+    TicketType:
       required:
       - guestCapacity
       - id
